--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
 header {
   height: 465px;
   background-image: url("img/header.png");
+  padding:45px;
 }
 
 .rectangulo{
@@ -76,6 +77,7 @@ header {
   display: inline-flex;
   flex-direction: row;
   justify-content: space-between;
+  padding: 45px;
 }
 
 .blanco {
@@ -106,11 +108,13 @@ button {
 
 .dos {
     height: 314px;
+    padding: 45px;
 }
 
 .tres {
     height: 283px;
     background-image: url("img/backgroundvid.png");
+    padding: 45px;
 }
 
 .tres p {
@@ -127,6 +131,7 @@ button {
 .cuatro {
     height: 125px;
     font-size:30.64pt;
+    padding: 45px;
  
 }
 .centro {
